src/bindings/c/CPLC.h

extern "C" void CPLC_map_cell2coord(int i, int j, int k, double coord_xyz[]);
extern "C" bool CPLC_map_coord2cell(double x,  double y,  double z,  int cell_ijk[]);
extern "C" void CPLC_get_no_cells(int limits[], int no_cells[]);
extern "C" bool CPLC_map_glob2loc_cell(int limits[], int glob_cell[], int loc_cell[]);
extern "C" bool CPLC_map_loc2glob_cell(int limits[], int loc_cell[], int glob_cell[]);
extern "C" void CPLC_get_olap_limits(int limits[]);
extern "C" void CPLC_get_cnst_limits(int limits[]);
extern "C" void CPLC_get_bnry_limits(int limits[]);
extern "C" bool CPLC_map_cfd2md_coord(double coord_cfd[], double coord_md[]);
extern "C" bool CPLC_map_md2cfd_coord(double coord_md[], double coord_cfd[]);
extern "C" bool CPLC_overlap();
extern "C" bool CPLC_is_proc_inside(int region[]);
// Setters
extern "C" void CPLC_set_output_mode
( int mode
);
// Getters
extern "C" int CPLC_nsteps_md();
extern "C" int CPLC_nsteps_cfd();
extern "C" int CPLC_nsteps_coupled();
extern "C" int CPLC_icmin_olap();
extern "C" int CPLC_jcmin_olap();
extern "C" int CPLC_kcmin_olap();
extern "C" int CPLC_icmax_olap();
extern "C" int CPLC_jcmax_olap();
extern "C" int CPLC_kcmax_olap();
extern "C" int CPLC_icmin_cnst();
extern "C" int CPLC_jcmin_cnst();
extern "C" int CPLC_kcmin_cnst();
extern "C" int CPLC_ncx();
extern "C" int CPLC_ncy();
extern "C" int CPLC_ncz();
extern "C" int CPLC_npx_md();
extern "C" int CPLC_npy_md();
extern "C" int CPLC_npz_md();
extern "C" int CPLC_npx_cfd();
extern "C" int CPLC_npy_cfd();
extern "C" int CPLC_npz_cfd();