src/bindings/c/CPLC.f90


        CPLC_is_proc_inside = CPL_is_proc_inside(region_f)

        region_f = region_f - 1
    end function CPLC_is_proc_inside
        

    logical(C_BOOL) function CPLC_map_cfd2md_coord(coord_cfd, coord_md) &
        bind(C, name="CPLC_map_cfd2md_coord")
        use CPL, only: CPL_map_cfd2md_coord
    
        ! Input position
        type(C_PTR), value :: coord_cfd ! (3)
        type(C_PTR), value :: coord_md ! (3)
       
        ! Fortran equivalent array
        real(kind(0.d0)), dimension(:), pointer :: coord_cfd_f
        real(kind(0.d0)), dimension(:), pointer :: coord_md_f
       
        call C_F_POINTER(coord_cfd, coord_cfd_f, [3])
        call C_F_POINTER(coord_md, coord_md_f, [3])

        CPLC_map_cfd2md_coord = CPL_map_cfd2md_coord(coord_cfd_f, coord_md_f)

    end function CPLC_map_cfd2md_coord
    
    logical(C_BOOL) function CPLC_map_md2cfd_coord(coord_md, coord_cfd) &
        bind(C, name="CPLC_map_md2cfd_coord")
        use CPL, only: CPL_map_md2cfd_coord
    
        ! Input position
        type(C_PTR), value :: coord_cfd ! (3)
        type(C_PTR), value :: coord_md ! (3)
       
        ! Fortran equivalent array
        real(kind(0.d0)), dimension(:), pointer :: coord_cfd_f
        real(kind(0.d0)), dimension(:), pointer :: coord_md_f
       
        call C_F_POINTER(coord_cfd, coord_cfd_f, [3])
        call C_F_POINTER(coord_md, coord_md_f, [3])

        CPLC_map_md2cfd_coord = CPL_map_md2cfd_coord(coord_md_f, coord_cfd_f)

    end function CPLC_map_md2cfd_coord
 

    subroutine CPLC_map_cell2coord(i, j, k, coord_xyz) &
        bind(C, name="CPLC_map_cell2coord")
        use CPL, only: CPL_map_cell2coord
    
        ! Input position
        integer(C_INT), value :: i, j, k
        type(C_PTR), value :: coord_xyz ! (3)
       
        ! Fortran equivalent array
        real(kind(0.d0)), dimension(:), pointer :: coord_xyz_f
       
        call C_F_POINTER(coord_xyz, coord_xyz_f, [3])
        
        call CPL_map_cell2coord(i + 1, j + 1, k + 1, coord_xyz_f)
        
    end subroutine CPLC_map_cell2coord


    logical(C_BOOL) function CPLC_map_coord2cell(x, y, z, cell_ijk) &
        bind(C, name="CPLC_map_coord2cell")
        use CPL, only: CPL_map_coord2cell
    
        ! Input position
        real(C_DOUBLE), value :: x, y, z
        type(C_PTR), value :: cell_ijk ! (3)
       
        ! Fortran equivalent array
        integer, dimension(:), pointer :: cell_ijk_f
       
        call C_F_POINTER(cell_ijk, cell_ijk_f, [3])
       
        CPLC_map_coord2cell = CPL_map_coord2cell(x, y, z, cell_ijk_f)

        cell_ijk_f = cell_ijk_f - 1
        
    end function CPLC_map_coord2cell
    

    subroutine CPLC_get_no_cells(limits, no_cells) &
        bind(C, name="CPLC_get_no_cells")
        use CPL, only: CPL_get_no_cells
    
        ! Input position
        type(C_PTR), value :: limits ! (6)
        type(C_PTR), value :: no_cells ! (3)
       
        ! Fortran equivalent array
        integer, dimension(:), pointer :: limits_f
        integer, dimension(:), pointer :: no_cells_f
       
        call C_F_POINTER(limits, limits_f, [6])
        call C_F_POINTER(no_cells, no_cells_f, [3])

        limits_f = limits_f + 1

        call CPL_get_no_cells(limits_f, no_cells_f)

        limits_f = limits_f - 1

    end subroutine CPLC_get_no_cells

    logical(C_BOOL) function CPLC_map_glob2loc_cell(limits, glob_cell, loc_cell) &
        bind(C, name="CPLC_map_glob2loc_cell")
        use CPL, only: CPL_map_glob2loc_cell
    
        ! Input position
        type(C_PTR), value :: limits ! (6)
        type(C_PTR), value :: glob_cell, loc_cell ! (3)
       
        ! Fortran equivalent array
        integer, dimension(:), pointer :: limits_f
        integer, dimension(:), pointer :: glob_cell_f, loc_cell_f
       
        call C_F_POINTER(limits, limits_f, [6])
        call C_F_POINTER(glob_cell, glob_cell_f, [3])
        call C_F_POINTER(loc_cell, loc_cell_f, [3])

        limits_f = limits_f + 1
        glob_cell_f = glob_cell_f + 1

        CPLC_map_glob2loc_cell = CPL_map_glob2loc_cell(limits_f, glob_cell_f, loc_cell_f)

        limits_f = limits_f - 1
        glob_cell_f = glob_cell_f - 1
        loc_cell_f = loc_cell_f - 1

    end function CPLC_map_glob2loc_cell


    logical(C_BOOL) function CPLC_map_loc2glob_cell(limits, loc_cell, glob_cell) &
        bind(C, name="CPLC_map_loc2glob_cell")
        use CPL, only: CPL_map_loc2glob_cell
    
        ! Input position
        type(C_PTR), value :: limits ! (6)
        type(C_PTR), value :: glob_cell, loc_cell ! (3)
       
        ! Fortran equivalent array
        integer, dimension(:), pointer :: limits_f
        integer, dimension(:), pointer :: glob_cell_f, loc_cell_f
       
        call C_F_POINTER(limits, limits_f, [6])
        call C_F_POINTER(glob_cell, glob_cell_f, [3])
        call C_F_POINTER(loc_cell, loc_cell_f, [3])

        limits_f = limits_f + 1
        glob_cell_f = glob_cell_f + 1

        CPLC_map_loc2glob_cell = CPL_map_loc2glob_cell(limits_f, loc_cell_f, glob_cell_f)

        limits_f = limits_f - 1
        glob_cell_f = glob_cell_f - 1
        loc_cell_f = loc_cell_f - 1

    end function CPLC_map_loc2glob_cell
   

    subroutine CPLC_get_olap_limits(limits) &
        bind(C, name="CPLC_get_olap_limits")
        use CPL, only: CPL_get_olap_limits
    
        ! Input position
        type(C_PTR), value :: limits ! (6)
       
        ! Fortran equivalent array
        integer, dimension(:), pointer :: limits_f
       
        call C_F_POINTER(limits, limits_f, [6])


        call CPL_get_olap_limits(limits_f)

        limits_f = limits_f - 1

    end subroutine CPLC_get_olap_limits
   

    subroutine CPLC_get_cnst_limits(limits) &
        bind(C, name="CPLC_get_cnst_limits")
        use CPL, only: CPL_get_cnst_limits
    
        ! Input position
        type(C_PTR), value :: limits ! (6)
       
        ! Fortran equivalent array
        integer, dimension(:), pointer :: limits_f
       
        call C_F_POINTER(limits, limits_f, [6])

        call CPL_get_cnst_limits(limits_f)

        limits_f = limits_f - 1

    end subroutine CPLC_get_cnst_limits

    subroutine CPLC_get_bnry_limits(limits) &
        bind(C, name="CPLC_get_bnry_limits")
        use CPL, only: CPL_get_bnry_limits
    
        ! Input position
        type(C_PTR), value :: limits ! (6)
       
        ! Fortran equivalent array
        integer, dimension(:), pointer :: limits_f
       
        call C_F_POINTER(limits, limits_f, [6])

        call CPL_get_bnry_limits(limits_f)

        limits_f = limits_f - 1

    end subroutine CPLC_get_bnry_limits



    logical(C_BOOL) function CPLC_overlap() &
        bind(C, name="CPLC_overlap")
        use CPL, only: CPL_overlap
    
        call F_C_BOOL(CPL_overlap(), CPLC_overlap)

    end function CPLC_overlap


!    logical(C_BOOL) function CPLC_realm() &
!        bind(C, name="CPLC_realm")
!        use CPL, only: CPL_realm
!    
!        CPLC_overlap = CPL_realm()

!    end function CPLC_realm
    
   
    ! Setters:

    subroutine CPLC_set_output_mode(mode) &
        bind(C, name="CPLC_set_output_mode")
        use CPL, only: set_output_mode
        
        integer(C_INT), intent(in), value :: mode

        call set_output_mode(mode)
        
    end subroutine CPLC_set_output_mode


    ! Getters: integers

    integer(C_INT) function CPLC_nsteps_md() &
        bind(C, name="CPLC_nsteps_md")
        use CPL, only: nsteps_md
        implicit none

        CPLC_nsteps_md = nsteps_md
        
    end function CPLC_nsteps_md

    integer(C_INT) function CPLC_nsteps_cfd() &
        bind(C, name="CPLC_nsteps_cfd")
        use CPL, only: nsteps_cfd
        implicit none

        CPLC_nsteps_cfd = nsteps_cfd
        
    end function CPLC_nsteps_cfd

    integer(C_INT) function CPLC_nsteps_coupled() &
        bind(C, name="CPLC_nsteps_coupled")
        use CPL, only: nsteps_coupled
        implicit none

        CPLC_nsteps_coupled = nsteps_coupled
        
    end function CPLC_nsteps_coupled

    integer(C_INT) function CPLC_ncx() &
        bind(C, name="CPLC_ncx")
        use CPL, only: ncx
        implicit none

        CPLC_ncx = ncx
        
    end function CPLC_ncx

    integer(C_INT) function CPLC_ncy() &
        bind(C, name="CPLC_ncy")
        use CPL, only: ncy
        implicit none

        CPLC_ncy = ncy
        
    end function CPLC_ncy

    integer(C_INT) function CPLC_ncz() &
        bind(C, name="CPLC_ncz")
        use CPL, only: ncz
        implicit none

        CPLC_ncz = ncz
        
    end function CPLC_ncz

    integer(C_INT) function CPLC_npx_md() &
        bind(C, name="CPLC_npx_md")
        use CPL, only: npx_md
        implicit none

        CPLC_npx_md = npx_md
        
    end function CPLC_npx_md

    integer(C_INT) function CPLC_npy_md() &
        bind(C, name="CPLC_npy_md")
        use CPL, only: npy_md
        implicit none

        CPLC_npy_md = npy_md
        
    end function CPLC_npy_md

    integer(C_INT) function CPLC_npz_md() &
        bind(C, name="CPLC_npz_md")
        use CPL, only: npz_md
        implicit none

        CPLC_npz_md = npz_md
        
    end function CPLC_npz_md


    integer(C_INT) function CPLC_npx_cfd() &
        bind(C, name="CPLC_npx_cfd")
        use CPL, only: npx_cfd
        implicit none

        CPLC_npx_cfd = npx_cfd
        
    end function CPLC_npx_cfd

    integer(C_INT) function CPLC_npy_cfd() &
        bind(C, name="CPLC_npy_cfd")
        use CPL, only: npy_cfd
        implicit none

        CPLC_npy_cfd = npy_cfd
        
    end function CPLC_npy_cfd

    integer(C_INT) function CPLC_npz_cfd() &
        bind(C, name="CPLC_npz_cfd")
        use CPL, only: npz_cfd
        implicit none

        CPLC_npz_cfd = npz_cfd
        
    end function CPLC_npz_cfd


    integer(C_INT) function CPLC_icmin_olap() &
        bind(C, name="CPLC_icmin_olap")
        use CPL, only: icmin_olap
        implicit none

        CPLC_icmin_olap = icmin_olap - 1
        
    end function CPLC_icmin_olap

    integer(C_INT) function CPLC_jcmin_olap() &
        bind(C, name="CPLC_jcmin_olap")
        use CPL, only: jcmin_olap
        implicit none

        CPLC_jcmin_olap = jcmin_olap - 1
        
    end function CPLC_jcmin_olap

    integer(C_INT) function CPLC_kcmin_olap() &
        bind(C, name="CPLC_kcmin_olap")
        use CPL, only: kcmin_olap
        implicit none

        CPLC_kcmin_olap = kcmin_olap - 1
        
    end function CPLC_kcmin_olap

    integer(C_INT) function CPLC_icmax_olap() &
        bind(C, name="CPLC_icmax_olap")
        use CPL, only: icmax_olap
        implicit none

        CPLC_icmax_olap = icmax_olap - 1
        
    end function CPLC_icmax_olap

    integer(C_INT) function CPLC_jcmax_olap() &
        bind(C, name="CPLC_jcmax_olap")
        use CPL, only: jcmax_olap
        implicit none

        CPLC_jcmax_olap = jcmax_olap - 1
        
    end function CPLC_jcmax_olap

    integer(C_INT) function CPLC_kcmax_olap() &
        bind(C, name="CPLC_kcmax_olap")
        use CPL, only: kcmax_olap
        implicit none

        CPLC_kcmax_olap = kcmax_olap - 1
        
    end function CPLC_kcmax_olap

    integer(C_INT) function CPLC_icmin_cnst() &
        bind(C, name="CPLC_icmin_cnst")
        use CPL, only: icmin_cnst
        implicit none

        CPLC_icmin_cnst = icmin_cnst - 1
        
    end function CPLC_icmin_cnst

    integer(C_INT) function CPLC_jcmin_cnst() &
        bind(C, name="CPLC_jcmin_cnst")
        use CPL, only: jcmin_cnst
        implicit none

        CPLC_jcmin_cnst = jcmin_cnst - 1
        
    end function CPLC_jcmin_cnst

    integer(C_INT) function CPLC_kcmin_cnst() &
        bind(C, name="CPLC_kcmin_cnst")
        use CPL, only: kcmin_cnst
        implicit none

        CPLC_kcmin_cnst = kcmin_cnst - 1
        
    end function CPLC_kcmin_cnst
